--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation 'androidx.room:room-rxjava2:2.1.0'
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
